--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,15 +3,16 @@
     package="com.xian.www.tangdaizi">
 
     <application
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".ui.MainActivity"
+            android:screenOrientation="portrait">
         </activity>
-        <activity android:name=".ui.LoginAcitvity"
-        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        <activity android:name=".ui.LoginAcitvity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
