--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,4 +24,5 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.jakewharton:butterknife:6.1.0'
     compile 'com.android.support:design:25.3.1'
+    compile 'com.github.bumptech.glide:glide:3.6.1'
 }
