--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,5 @@ dependencies {
     compile 'com.jakewharton:butterknife:6.1.0'
     compile 'com.android.support:design:25.3.1'
     compile 'com.github.bumptech.glide:glide:3.6.1'
+    compile 'pub.devrel:easypermissions:0.1.9'
 }
