--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,13 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".login.WeixinLogin"
+            android:screenOrientation="portrait">
+        </activity>
         <activity android:name=".ui.MainActivity"
+            android:screenOrientation="portrait">
+        </activity>
+        <activity android:name=".second.DaminggongActivity"
             android:screenOrientation="portrait">
         </activity>
         <activity android:name=".ui.LoginAcitvity">
