--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,12 @@
         <activity android:name=".login.WeixinLogin"
             android:screenOrientation="portrait">
         </activity>
+        <activity android:name=".login.WeiboLogin"
+            android:screenOrientation="portrait">
+        </activity>
+        <activity android:name=".login.QqLogin"
+            android:screenOrientation="portrait">
+        </activity>
         <activity android:name=".ui.MainActivity"
             android:screenOrientation="portrait">
         </activity>
