--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,7 @@ dependencies {
     compile 'com.android.support:design:25.3.1'
     compile 'com.github.bumptech.glide:glide:3.6.1'
     compile 'pub.devrel:easypermissions:0.1.9'
+    compile 'com.android.support:recyclerview-v7:25.3.1'
+    compile 'com.android.support:cardview-v7:25.3.1'
+    compile 'com.alibaba:fastjson:1.2.10'
 }
