大明宫好了

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,11 @@
         </activity>
         <activity android:name=".second.DaminggongActivity"
             android:screenOrientation="portrait">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity android:name=".ui.LoginAcitvity">
         </activity>
@@ -42,6 +47,9 @@
         </activity>
         <activity android:name=".ui.RegisteActivity">
         </activity>
+        <activity android:name=".three.DmgJianjieActivity"/>
+        <activity android:name=".three.DmgdaoyouActivity"/>
+        <activity android:name=".three.DmggushiActivity"/>
     </application>
 
 </manifest>
