--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,11 +30,14 @@
         </activity>
         <activity android:name=".second.DaminggongActivity"/>
         <activity android:name=".second.XiActivity">
-        </activity> <activity android:name=".second.DatangActivity">
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
+        </activity>
+        <activity android:name=".second.DatangActivity">
+        </activity>
+        <activity android:name=".second.DytActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity android:name=".second.ShiActivity">
         </activity>
@@ -43,7 +46,6 @@
         <activity android:name=".SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -52,9 +54,12 @@
         <activity android:name=".three.DmgJianjieActivity"/>
         <activity android:name=".three.DmgdaoyouActivity"/>
         <activity android:name=".three.DmggushiActivity"/>
-        <activity android:name=".three.DatangJianjieActivity"/>
+        <activity android:name=".three.DtJianjieActivity"/>
         <activity android:name=".three.DtdaoyouActivity"/>
         <activity android:name=".three.DtgushiActivity"/>
+        <activity android:name=".three.DytJianjieActivity"/>
+        <activity android:name=".three.DytdaoyouActivity"/>
+        <activity android:name=".three.DytgushiActivity"/>
     </application>
 
 </manifest>
