--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,10 +42,6 @@
         <activity android:name=".second.KeActivity">
         </activity>
         <activity android:name=".second.HqcActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity android:name=".ui.LoginAcitvity">
         </activity>
@@ -69,6 +65,8 @@
         <activity android:name=".three.HqcJianjieActivity"/>
         <activity android:name=".three.HqcdaoyouActivity"/>
         <activity android:name=".three.HqcgushiActivity"/>
+        <activity android:name=".picture.PictureDetailsActivity"/>
+        <activity android:name=".ui.SetActivity"/>
     </application>
 
 </manifest>
