--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,12 @@
         </activity>
         <activity android:name=".second.HqcActivity">
         </activity>
+        <activity android:name=".second.gongyi.GyActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity android:name=".ui.LoginAcitvity">
         </activity>
         <activity android:name=".SplashActivity">
@@ -73,6 +79,7 @@
         <activity android:name=".three.ZsHqcActivity"/>
         <activity android:name=".picture.PictureDetailsActivity"/>
         <activity android:name=".ui.SetActivity"/>
+        <activity android:name=".second.gongyi.GyPictureDetailsActivity"/>
     </application>
 
 </manifest>
