--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,7 +41,11 @@
         </activity>
         <activity android:name=".second.YiActivity">
         </activity>
-        <activity android:name=".second.KeActivity">
+        <activity android:name=".second.ke.KeActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity android:name=".second.HqcActivity">
         </activity>
@@ -73,6 +77,7 @@
         <activity android:name=".three.ZsDtActivity"/>
         <activity android:name=".three.ZsDytActivity"/>
         <activity android:name=".three.ZsHqcActivity"/>
+        <activity android:name=".three.LengActivity"/>
         <activity android:name=".picture.PictureDetailsActivity"/>
         <activity android:name=".ui.SetActivity"/>
         <activity android:name=".second.gongyi.GyPictureDetailsActivity"/>
