--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,12 +40,13 @@
         <activity android:name=".second.ZhishiActivity">
         </activity>
         <activity android:name=".second.YiActivity">
-        </activity>
-        <activity android:name=".second.ke.KeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".second.KeActivity">
+
         </activity>
         <activity android:name=".second.HqcActivity">
         </activity>
@@ -78,6 +79,7 @@
         <activity android:name=".three.ZsDytActivity"/>
         <activity android:name=".three.ZsHqcActivity"/>
         <activity android:name=".three.LengActivity"/>
+        <activity android:name=".three.FushiActivity"/>
         <activity android:name=".picture.PictureDetailsActivity"/>
         <activity android:name=".ui.SetActivity"/>
         <activity android:name=".second.gongyi.GyPictureDetailsActivity"/>
