--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,23 +52,21 @@
         <activity android:name=".ui.LoginAcitvity">
         </activity>
         <activity android:name=".SplashActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+
         </activity>
         <activity android:name=".ui.RegisteActivity">
         </activity>
         <activity android:name=".three.DmgJianjieActivity"/>
         <activity android:name=".three.DmgdaoyouActivity">
+        </activity>
+        <activity android:name=".three.DmggushiActivity"/>
+        <activity android:name=".three.DtJianjieActivity"/>
+        <activity android:name=".three.DtdaoyouActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".three.DmggushiActivity"/>
-        <activity android:name=".three.DtJianjieActivity"/>
-        <activity android:name=".three.DtdaoyouActivity"/>
         <activity android:name=".three.DtgushiActivity"/>
         <activity android:name=".three.DytJianjieActivity"/>
         <activity android:name=".three.DytdaoyouActivity"/>
