--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,8 +28,8 @@
         <activity android:name=".ui.MainActivity"
             android:screenOrientation="portrait">
             <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
-            <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity android:name=".second.DaminggongActivity"/>
@@ -83,6 +83,12 @@
         <activity android:name=".three.ZsDtActivity"/>
         <activity android:name=".three.ZsDytActivity"/>
         <activity android:name=".three.ZsHqcActivity"/>
+        <activity android:name=".second.find.FindDetailActivity">
+
+            </activity>
+        <activity android:name=".second.find.GgDetailActivity">
+
+            </activity>
         <activity android:name=".three.LengActivity"/>
         <activity android:name=".three.FushiActivity"/>
         <activity android:name=".picture.PictureDetailsActivity"/>
