--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,4 +46,5 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-gson:2.0.0-beta4'
     compile 'com.squareup.retrofit2:converter-scalars:2.0.0'
     compile 'com.squareup.okhttp3:okhttp:3.4.1'
+    compile 'com.android.support:percent:25.1.0'
 }
