--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,10 +31,10 @@
         <activity
             android:name=".ui.MainActivity"
             android:screenOrientation="portrait">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            <!--<intent-filter>-->
+                <!--<action android:name="android.intent.action.MAIN" />-->
+                <!--<category android:name="android.intent.category.LAUNCHER" />-->
+            <!--</intent-filter>-->
         </activity>
         <activity android:name=".second.DmgActivityShipin" />
         <activity android:name=".second.XiActivity"></activity>
@@ -52,10 +52,10 @@
         <activity android:name=".second.gongyi.GyActivity"></activity>
         <activity android:name=".ui.LoginAcitvity"></activity>
         <activity android:name=".SplashActivity">
-            <!--<intent-filter>-->
-            <!--<action android:name="android.intent.action.MAIN" />-->
-            <!--<category android:name="android.intent.category.LAUNCHER" />-->
-            <!--</intent-filter>-->
+            <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+            <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity android:name=".WelcomeActivity"></activity>
         <activity android:name=".ui.RegisteActivity"></activity>
@@ -80,6 +80,7 @@
             android:hardwareAccelerated="true"></activity>
         <activity android:name=".second.find.GgDetailActivity"></activity>
         <activity android:name=".second.find.Gg2DetailActivity"></activity>
+        <activity android:name=".second.find.Gg3DetailActivity"></activity>
         <activity android:name=".second.find.QianxunDetailActivity"></activity>
         <activity android:name=".three.LengActivity" />
         <activity android:name=".three.FushiActivity" />
@@ -300,6 +301,10 @@
         <activity
             android:hardwareAccelerated="true"
             android:name=".second.zhishi.ZsjsHighActivity08"
+            />
+        <activity
+            android:hardwareAccelerated="true"
+            android:name=".second.UserInfoAcitvity"
             />
     </application>
 
