--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
     <application
         android:name="cn.dq.www.guangchangan.MyApplication"
@@ -278,6 +279,10 @@
         <activity
             android:hardwareAccelerated="true"
             android:name="cn.dq.www.guangchangan.second.UserInfoAcitvity"
+            />
+        <activity
+            android:hardwareAccelerated="true"
+            android:name=".utils.VideoActivity"
             />
     </application>
 
