--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -282,6 +282,7 @@
             />
         <activity
             android:hardwareAccelerated="true"
+            android:screenOrientation="landscape"
             android:name=".utils.VideoActivity"
             />
     </application>
