--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,8 +9,8 @@ android {
             storePassword '123456'
         }
     }
-    compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    compileSdkVersion 23
+    buildToolsVersion "23.0.2"
     defaultConfig {
         applicationId "cn.dq.www.guangchangan"
         minSdkVersion 15
@@ -26,6 +26,13 @@ android {
             signingConfig signingConfigs.config
         }
     }
+    sourceSets {
+        main {
+            assets.srcDirs = ['assets']
+        }
+        debug.setRoot('build-types/debug')
+        release.setRoot('build-types/release')
+    }
     aaptOptions { cruncherEnabled = false }
     productFlavors {
     }
@@ -34,22 +41,40 @@ android {
         abortOnError false
     }
 
+    /**
+     * 配置生成的apk打包的名称
+     */
+    applicationVariants.all { variant ->
+        variant.outputs.each { output ->
+            def outputFile = output.outputFile
+            if (outputFile != null && outputFile.name.endsWith('.apk')) {
+                if (variant.buildType.name.equals('debug')) {
+                    def fileName = "tdz_debug.apk"
+                    output.outputFile = new File(outputFile.parent, fileName)
+                } else {
+                    // 输出apk名称为basketball.apk
+                    def fileName = "tdz_release.apk"
+                    output.outputFile = new File(outputFile.parent, fileName)
+                }
+            }
+        }
+    }
 }
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.android.support:appcompat-v7:23.0.1'
     testCompile 'junit:junit:4.12'
     compile 'com.jakewharton:butterknife:6.1.0'
-    compile 'com.android.support:design:25.3.1'
+    compile 'com.android.support:design:23.0.1'
     compile 'com.github.bumptech.glide:glide:3.6.1'
     compile 'pub.devrel:easypermissions:0.1.9'
-    compile 'com.android.support:recyclerview-v7:25.3.1'
-    compile 'com.android.support:cardview-v7:25.3.1'
+    compile 'com.android.support:recyclerview-v7:23.0.1'
+    compile 'com.android.support:cardview-v7:23.0.1'
     compile 'com.alibaba:fastjson:1.2.10'
     compile 'com.squareup.retrofit2:retrofit:2.0.0-beta4'
     compile 'com.squareup.retrofit2:converter-gson:2.0.0-beta4'
     compile 'com.squareup.retrofit2:converter-scalars:2.0.0'
     compile 'com.squareup.okhttp3:okhttp:3.4.1'
-    compile 'com.android.support:percent:25.1.0'
+    compile 'com.android.support:percent:23.1.0'
 }
